# Wizards-Staff

./: .gitignore  CHANGELOG.md  README.md  environment.yml  functions_overview.md  pyproject.toml  wizards_staff_example.ipynb  wizards_staff_example_OLD.ipynb
.github/: github-to-asana-users.json
.github/workflows/: ci-cd.yaml  ci-cd.yml  complete-asana-task.yml  create-asana-task.yml  sync-comment-to-asana.yml
docs/: api.md
lizard-wizard-analyzer/: king-gizzard.py  metrics.py  plotting.py  pwc.py
notebooks/: event_labeling.ipynb  tutorial-notebook.ipynb  wizards_staff_example.ipynb  wizards_staff_moldev-2d.ipynb
tests/: conftest.py  test_Orb.py  test_Shard.py
tests/labeling/: test_event_labeler.py
tests/stats/: test_outliers.py
tests/wizards/: test_event_filters.py
wizard/: king-gizzard.py  king_gizzard.py  metadata.py  pwc.py
wizards_staff/: __init__.py  benchling.py  cli.py  drug_response.py  gcp.py  king_gizzard.py  logger.py  metadata.py  metrics.py  plotting.py  pwc.py  reporting.py  utils.py  wizards_cauldron.py  wizards_familiars.py  wizards_spellbook.py
wizards_staff/labeling/: __init__.py  event_labeler.py
wizards_staff/stats/: __init__.py  assumptions.py  core.py  corrections.py  effect_size.py  outliers.py  power.py  reports.py  synthetic_data.py  tests.py  timeseries.py  visualizations.py
wizards_staff/wizards/: cauldron.py  familiars.py  orb.py  shard.py  spellbook.py
