[tool.poetry]
name = "wizards_staff"
version = "0.1.0"
description = "Calcium imaging analysis pipeline for extracting metrics from Lizard-Wizard outputs, developed for the Arc Institute"
authors = ["mrjholt <mr.jesseholt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scipy = "^1.10.1"
bokeh = "^3.4.2"
caiman = {git = "https://github.com/flatironinstitute/CaImAn.git", tag = "v1.11.3"}
h5py = "^3.11.0"
holoviews = "^1.19.0"
ipykernel = "^6.29.4"
ipyparallel = "^8.8.0"
ipython = "^8.0.0"
ipywidgets = "^8.1.3"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
peakutils = "^1.3.5"
pims = "^0.7"
psutil = "^6.0.0"
pynwb = "^2.8.0"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.0"
tifffile = "^2024.6.0"
tqdm = "^4.66.4"
zarr = "^2.18.2"
opencv-python = "^4.8.0"

# Pip dependencies
[tool.poetry.extras]
aicspylibczi = ["aicspylibczi"]
build = ["build"]
czifile = ["czifile"]
poetry-core = ["poetry-core"]
xmltodict = ["xmltodict"]
glob2 = ["glob2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
