[tool.poetry]
name = "wizards_staff"
version = "0.1.0"
description = "Calcium imaging analysis pipeline for extracting metrics from Lizard-Wizard outputs, developed for the Arc Institute"
authors = ["mrjholt <mr.jesseholt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scipy = "^1.10.1"
bokeh = "^3.4.2"
caiman = {git = "https://github.com/flatironinstitute/CaImAn.git", tag = "v1.11.3"}
h5py = "^3.11.0"
holoviews = "^1.19.0"
ipykernel = "==6.29.5"
traitlets = "==5.14.3"
jupyter-client = "==8.6.3"
jupyter-core = "==5.7.2" 
ipyparallel = "^8.8.0"
ipython = "^8.0.0"
# ipywidgets is an optional dependency; install it via the "labeling"
# extra (see [tool.poetry.extras] below). Keeping it out of core deps
# lets headless callers (e.g. Lizard-Wizard's CLI) import wizards_staff
# without pulling in a Jupyter widget stack.
ipywidgets = {version = "^8.1.3", optional = true}
matplotlib = "^3.8.4"
numpy = "^1.26.4"
peakutils = "^1.3.5"
pims = "^0.7"
psutil = "^6.0.0"
pynwb = "^2.8.0"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.0"
jinja2 = "^3.1.0"
tensorflow = "^2.15.0"
tifffile = "^2024.6.0"
tqdm = "^4.66.4"
zarr = "^2.18.2"
opencv-python = "^4.8.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
pypika = "^0.48.9"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
google-cloud-storage = "^2.18.2"
pytest = "^8.3.3"

# Pip dependencies
[tool.poetry.extras]
aicspylibczi = ["aicspylibczi"]
build = ["build"]
czifile = ["czifile"]
poetry-core = ["poetry-core"]
xmltodict = ["xmltodict"]
glob2 = ["glob2"]
# Optional dependencies for the notebook event-labeling tool
# (wizards_staff.labeling.EventLabeler). Install with:
#   pip install 'wizards_staff[labeling]'
labeling = ["ipywidgets"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wizards-staff = "wizards_staff.cli:main"

# -----------------------------------------------------------------------------
# Pytest configuration
#
# Restrict discovery to the dedicated `tests/` tree. Without this, pytest's
# default `test_*.py` glob picks up production helper modules (e.g.
# `wizards_staff/stats/synthetic_data.py` historically named `test_utils.py`)
# and imports the whole `wizards_staff` package just to collect them. That
# import path drags in caiman + tensorflow, which can take 30-60s and leak
# non-daemon threads at exit -- the symptom users see as "the test suite
# hangs".
#
# The `tests/` modules deliberately load only the code under test via
# importlib + sys.modules stubs, so the suite runs in seconds with no heavy
# optional dependencies installed.
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"